Fix overflow/wrap in editor

--- a/src/scripts/components/toolbar/toolbar.scss
+++ b/src/scripts/components/toolbar/toolbar.scss
@@ -41,6 +41,7 @@
     flex-direction: row;
     flex-grow: 0;
     flex-shrink: 1;
+    flex-wrap: wrap;
 
     .toolbar-button {
       color: #1768C4;
